welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:42: error: ';' expected but '=' found.
											estSurMessage():Boolean = true;	
                                                                                                                ^